crates/service/tests/diagnostics/snapshots/features__diagnostics__dup_names__blocks.snap
---
source: crates/service/tests/diagnostics/dup_names.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 15
        },
        "end": {
          "line": 5,
          "character": 17
        }
      },
      "severity": 1,
      "source": "wat",
      "message": "duplicated name `$b` in this scope",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 11
              },
              "end": {
                "line": 3,
                "character": 13
              }
            }
          },
          "message": "already defined here as `$b`"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 7,
                "character": 19
              },
              "end": {
                "line": 7,
                "character": 21
              }
            }
          },
          "message": "already defined here as `$b`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 11
        },
        "end": {
          "line": 3,
          "character": 13
        }
      },
      "severity": 1,
      "source": "wat",
      "message": "duplicated name `$b` in this scope",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 5,
                "character": 15
              },
              "end": {
                "line": 5,
                "character": 17
              }
            }
          },
          "message": "already defined here as `$b`"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 7,
                "character": 19
              },
              "end": {
                "line": 7,
                "character": 21
              }
            }
          },
          "message": "already defined here as `$b`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 7,
          "character": 19
        },
        "end": {
          "line": 7,
          "character": 21
        }
      },
      "severity": 1,
      "source": "wat",
      "message": "duplicated name `$b` in this scope",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 11
              },
              "end": {
                "line": 3,
                "character": 13
              }
            }
          },
          "message": "already defined here as `$b`"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 5,
                "character": 15
              },
              "end": {
                "line": 5,
                "character": 17
              }
            }
          },
          "message": "already defined here as `$b`"
        }
      ]
    }
  ]
}
