crates/service/tests/diagnostics/snapshots/features__diagnostics__dup_names__tag.snap
---
source: crates/service/tests/diagnostics/dup_names.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 7
        },
        "end": {
          "line": 2,
          "character": 9
        }
      },
      "severity": 1,
      "code": "duplicated-names",
      "source": "wat",
      "message": "duplicated tag name `$_` in this scope",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 7
              },
              "end": {
                "line": 3,
                "character": 9
              }
            }
          },
          "message": "already defined here as `$_`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 7
        },
        "end": {
          "line": 3,
          "character": 9
        }
      },
      "severity": 1,
      "code": "duplicated-names",
      "source": "wat",
      "message": "duplicated tag name `$_` in this scope",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 2,
                "character": 7
              },
              "end": {
                "line": 2,
                "character": 9
              }
            }
          },
          "message": "already defined here as `$_`"
        }
      ]
    }
  ]
}
